k8s/00-namespace-configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: consearch
  labels:
    name: consearch
